--- a/src/styles/components/NavMenu.module.scss
+++ b/src/styles/components/NavMenu.module.scss
@@ -58,8 +58,8 @@
 
 @keyframes navbarVisible{
   100% {
-      height: 16.375rem;
-      overflow-y: visible;
+      height: 18rem;
+      overflow: visible;
     }
   }
 
@@ -73,7 +73,7 @@
     box-sizing: border-box;
     padding: 0;
     transition: all 0.4s ease-in-out;
-    transform: translateX(-15.5rem);
+    transform: translateX(-14rem);
 
     .hamburgerContainer{
       display: none;
