--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,11 @@
-:root{
-  scroll-behavior: smooth;
-}
-
-*,*::before,*::after{
+*{
+  box-sizing: border-box;
   padding: 0;
-  margin: 0;
   border: 0;
+  margin: 0;
 }
 
-// ************************** breakpoint medium ******************************
-// ************************** breakpoint large *******************************
-// ************************** font size and family ***************************
-// ************************** theme colors ***********************************
+body {
+  width: 100%;
+  height: 100vh;
+}
