--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,8 @@
 }
 
 .countdown-number {
-  font-size: 2rem;
+  font-size: 2.5rem;
+  font-weight: 700;
   color: #f7f7f7; /* Color de los números en dark mode */
   margin-right: 0.5rem;
 }
